revamp layout, fix alignment issues
this takes care of flex and overflow of lists by making list display:
flex

also some alignment issues are fixed - famous trash icon, badge, list
items next to perfect scrollbar

and input group for creating new list - maybe hide it and leave only a
button?

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -60,6 +60,10 @@ input::-webkit-slider-thumb {
   height: 100%;
 }
 
+.icon-align {
+  padding: 2px;
+}
+
 .scrolled {
   overflow: hidden;
   position: relative;
@@ -70,6 +74,18 @@ input::-webkit-slider-thumb {
   padding-right: 0px;
   padding-left: 0px;
   position: relative;
+}
+
+.uncollapse {
+  transition: all 1s;
+}
+
+.non-opaque {
+  opacity: 0.1;
+}
+
+.opaque {
+  opacity: 1;
 }
 
 .browsehappy {
@@ -90,6 +106,11 @@ html {
   height: 100%;
 }
 
+.row {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
 .marketing,
@@ -101,13 +122,12 @@ html {
 /* Custom page header */
 .header {
   border-bottom: 1px solid #e5e5e5;
+  margin-bottom: 5px;
 
   /* Make the masthead heading the same height as the navigation */
   h3 {
-    margin-top: 0;
-    margin-bottom: 0;
-    line-height: 40px;
-    padding-bottom: 19px;
+    margin-top: 0px;
+    margin-bottom: 0px;
   }
 }
 
@@ -118,49 +138,9 @@ html {
   border-top: 1px solid #e5e5e5;
 }
 
-.container-narrow > hr {
-  margin: 30px 0;
-}
-
-/* Main marketing message and sign up button */
-.jumbotron {
-  text-align: center;
-  border-bottom: 1px solid #e5e5e5;
-
-  .btn {
-    font-size: 21px;
-    padding: 14px 24px;
+@media (max-width: 768px) {
+  .uncollapse:hover {
+    width: 50%;
   }
 }
 
-/* Supporting marketing content */
-.marketing {
-  margin: 40px 0;
-
-  p + h4 {
-    margin-top: 28px;
-  }
-}
-
-/* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
-  .container {
-    max-width: 730px;
-  }
-
-  /* Remove the padding we set earlier */
-  .header,
-  .marketing,
-  .footer {
-    padding-left: 0;
-    padding-right: 0;
-  }
-  /* Space out the masthead */
-  .header {
-    margin-bottom: 30px;
-  }
-  /* Remove the bottom border on the jumbotron for visual effect */
-  .jumbotron {
-    border-bottom: 0;
-  }
-}
